[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pirt"
author = "Almar Klein"
author-email = "almar.klein@gmail.com"
home-page = "https://github.com/almarklein/pirt"
requires = [
    "numpy",
    "scipy",
    "numba",
    "visvis",
]
requires-python = ">=3"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
]

